<resources>
    <string name="app_name">Routine time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_routine">Welcome to Routine</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="nickname">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="routine">"Routine "</string>
    <string name="component_name">Component name</string>
    <string name="counterStartValue">0</string>
    <string name="send_report">Send report</string>
    <string name="quantity">Quantity</string>
    <string name="name_of_part">Name of Part:</string>
    <string name="input_name_of_detail">Input name of detail</string>
    <string name="start_meaning_for_counter">0</string>

</resources>