<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:textAlignment="center">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/routine"
        android:textAllCaps="true"
        android:textColor="@color/main_launch_text_colour"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_nickname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginTop="48dp"
        android:layout_marginRight="@dimen/margin_32"
        android:autofillHints=""
        android:background="@drawable/background_for_edit_text"
        android:hint="@string/nickname"
        android:inputType="text"
        android:paddingStart="@dimen/margin_32"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:text="@string/nickname" />

    <EditText
        android:id="@+id/ed_first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_32"
        android:autofillHints=""
        android:background="@drawable/background_for_edit_text"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="@dimen/margin_32"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_nickname"
        app:layout_constraintStart_toStartOf="@+id/ed_nickname"
        app:layout_constraintTop_toBottomOf="@+id/ed_nickname"
        tools:text="@string/first_name" />

    <EditText
        android:id="@+id/ed_last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_32"
        android:autofillHints=""
        android:background="@drawable/background_for_edit_text"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingStart="@dimen/margin_32"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_first_name"
        app:layout_constraintStart_toStartOf="@+id/ed_first_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_first_name"
        tools:text="@string/last_name" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_32"
        android:autofillHints=""
        android:background="@drawable/background_for_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_32"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_last_name"
        app:layout_constraintStart_toStartOf="@+id/ed_last_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_last_name"
        tools:text="@string/password" />

    <EditText
        android:id="@+id/ed_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_32"
        android:autofillHints=""
        android:background="@drawable/background_for_edit_text"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_32"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        tools:text="@string/repeat_password" />

    <Button
        android:id="@+id/btn_done_sign_in_or_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:background="@drawable/background_button"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_repeat_password" />


</androidx.constraintlayout.widget.ConstraintLayout>